--- a/ShifterBot/build.properties
+++ b/ShifterBot/build.properties
@@ -1,4 +1,4 @@
 # Project specific information
-package=com.girlsofsteelrobotics.shifterbot
+package=org.usfirst.frc3504.shifterbot
 robot.class=${package}.Robot
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
