RobotBuilder update for default drive command and joystick number
Set the default command for the drive subsystem to be DriveByJoystick.
Also changed the joystick from 1 to 0 to match the new WPIlib numbering
scheme.

Re-exporting from RobotBuilder touched just about all project files.
We'll have to consider this as we settle on a development process for
the team.

--- a/ShifterBotNew/ShifterBotNew.yml
+++ b/ShifterBotNew/ShifterBotNew.yml
@@ -66,7 +66,7 @@ Children:
       Name: Robot Drive 2
     Properties:
       Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
-        name: Default Command, type: Command, validators: null, value: None}
+        name: Default Command, type: Command, validators: null, value: DriveByJoystick}
     Base: Subsystem
     Name: Drive System
   - Children:
@@ -400,8 +400,9 @@ Children:
   Base: Commands
   Name: Commands
 Properties:
-  Eclipse Workspace: !!robotbuilder.data.properties.FileProperty {default: /Users/jackson/workspace,
-    extension: null, folder: true, name: Eclipse Workspace, validators: null, value: /Users/jackson/git/2015season}
+  Eclipse Workspace: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\Joseph
+      Jackson\workspace', extension: null, folder: true, name: Eclipse Workspace,
+    validators: null, value: 'C:\Users\Joseph Jackson\git\2015season'}
   Export Commands: !!robotbuilder.data.properties.BooleanProperty {default: true,
     name: Export Commands, validators: null, value: true}
   Java Package: !!robotbuilder.data.properties.StringProperty {default: org.usfirst.frc0000,
@@ -413,7 +414,7 @@ Properties:
   Export Subsystems: !!robotbuilder.data.properties.BooleanProperty {default: true,
     name: Export Subsystems, validators: null, value: true}
   Wiring File: !!robotbuilder.data.properties.FileProperty {default: '', extension: html,
-    folder: false, name: Wiring File, validators: null, value: /Users/jackson/git/2015season/ShifterBotNew/WiringTable.html}
+    folder: false, name: Wiring File, validators: null, value: 'C:\Users\Joseph Jackson\git\2015season\ShifterBotNew\WiringTable.html'}
   Simulation World File: !!robotbuilder.data.properties.StringProperty {default: /usr/share/frcsim/worlds/GearsBotDemo.world,
     name: Simulation World File, validators: null, value: /usr/share/frcsim/worlds/GearsBotDemo.world}
   Autonomous Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
