--- a/Secondary_Human_Training_Golem/.project
+++ b/Secondary_Human_Training_Golem/.project
@@ -15,4 +15,10 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>edu.wpi.first.wpilib.plugins.core.nature.FRCProjectNature</nature>
 	</natures>
+	<variableList>
+		<variable>
+			<name>USERLIBS_DIR</name>
+			<value>file:/C:/Users/Girls%20of%20Steel/wpilib/user/java/lib</value>
+		</variable>
+	</variableList>
 </projectDescription>
