--- a/JAVA_MotionProfileExample/.classpath
+++ b/JAVA_MotionProfileExample/.classpath
@@ -6,9 +6,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="var" path="opencv" sourcepath="opencv.sources"/>
 	<classpathentry kind="var" path="cscore" sourcepath="cscore.sources"/>
-	<classpathentry kind="var" path="USERLIBS_DIR/CTRLibJava.jar"/>
-	<classpathentry kind="var" path="USERLIBS_DIR/CTRLib.jar"/>
-	<classpathentry kind="var" path="USERLIBS_DIR/mindsensors-javadoc.jar"/>
-	<classpathentry kind="var" path="USERLIBS_DIR/mindsensors.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/CTRLib.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/Users/jackson/wpilib/user/java/docs/CTRLib/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
