--- a/JAVA_MotionProfileExample/.classpath
+++ b/JAVA_MotionProfileExample/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry including="talonProfileLeft.csv|talonProfileRight.csv" kind="src" path="Data"/>
+	<classpathentry excluding="src/|Data/" kind="src" path=""/>
 	<classpathentry kind="var" path="wpilib" sourcepath="wpilib.sources"/>
 	<classpathentry kind="var" path="networktables" sourcepath="networktables.sources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
