--- a/JAVA_MotionProfileExample/build.properties
+++ b/JAVA_MotionProfileExample/build.properties
@@ -2,3 +2,4 @@
 package=org.usfirst.frc.team3539.robot
 robot.class=${package}.Robot
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
+userLibs=Data/talonProfileLeft.csv:Data/talonProfileRight.csv
