--- a/Secondary_Human_Training_Golem/build.xml
+++ b/Secondary_Human_Training_Golem/build.xml
@@ -26,5 +26,10 @@
   <property file="${user.home}/wpilib/java/${version}/ant/build.properties"/>
   
   <import file="${wpilib.ant.dir}/build.xml"/>
-
+	 <target name="updateMotionProfiles" depends="get-target-ip,dependencies" description="Copy the talon motion profiles to the robot">
+	    <echo>[updateMotionProfiles] scp talon files</echo>
+		<scp file="Resources/talonProfileRight.csv" todir="${username}@${target}:" password="${password}" trust="true"/>
+		<scp file="Resources/talonProfileLeft.csv" todir="${username}@${target}:" password="${password}" trust="true"/>
+	  </target>
+	
 </project> 
