Added a "deployWithProfile" ant build target that both copies the motion profiles and builds+deploys the jar to the Robot.
Also added an Eclipse launch configuration "CopyMotionProfileAndDeploy"
to make it easier to find and use the above ant-build target.

--- a/Secondary_Human_Training_Golem/build.xml
+++ b/Secondary_Human_Training_Golem/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="FRC Deployment" default="deploy">
+<project name="FRC Deployment" default="deployWithProfile">
 
   <!--
   The following properties can be defined to override system level
@@ -31,5 +31,6 @@
 		<scp file="Resources/talonProfileRight.csv" todir="${username}@${target}:" password="${password}" trust="true"/>
 		<scp file="Resources/talonProfileLeft.csv" todir="${username}@${target}:" password="${password}" trust="true"/>
 	  </target>
+	<target name="deployWithProfile" depends="updateMotionProfiles,deploy" description="Copy the motion profiles over, then build and deploy the Robot code"/>
 	
 </project> 
