Changed build.xml to send all motion profiles, changed PID values

--- a/Secondary_Human_Training_Golem/build.xml
+++ b/Secondary_Human_Training_Golem/build.xml
@@ -28,6 +28,12 @@
   <import file="${wpilib.ant.dir}/build.xml"/>
 	 <target name="updateMotionProfiles" depends="get-target-ip,dependencies" description="Copy the talon motion profiles to the robot">
 	    <echo>[updateMotionProfiles] scp talon files</echo>
+	 	  <scp todir="${username}@${target}:" password="${password}" trust="true">
+	 	    <fileset dir="Resources">
+	 	      <include name="**/*.dat"/>
+	 	    </fileset>
+	 	  </scp>
+	 	<!--
 		<scp file="Resources/talonRight.csv" todir="${username}@${target}:talonProfileRight.csv" password="${password}" trust="true"/>
 		<scp file="Resources/talonLeft.csv" todir="${username}@${target}:talonProfileLeft.csv" password="${password}" trust="true"/>
 	 	<scp file="Resources/talonProfileRight01.csv" todir="${username}@${target}:talonProfileRight01.csv" password="${password}" trust="true"/>
@@ -35,7 +41,8 @@
 	 	<scp file="Resources/talonProfileRight02.csv" todir="${username}@${target}:talonProfileRight02.csv" password="${password}" trust="true"/>
 	 	<scp file="Resources/talonProfileLeft02.csv" todir="${username}@${target}:talonProfileLeft02.csv" password="${password}" trust="true"/>
 	 	<scp file="Resources/talonProfileRight03.csv" todir="${username}@${target}:talonProfileRight03.csv" password="${password}" trust="true"/>
-	 	<scp file="Resources/talonProfileLeft03.csv" todir="${username}@${target}:talonProfileLeft03.csv" password="${password}" trust="true"/>  
+	 	<scp file="Resources/talonProfileLeft03.csv" todir="${username}@${target}:talonProfileLeft03.csv" password="${password}" trust="true"/>
+	 	-->
 	 </target>
 	<target name="deployWithProfile" depends="updateMotionProfiles,deploy" description="Copy the motion profiles over, then build and deploy the Robot code"/>
 	
