-Created commandgroup for DriveByVision and driving back 3 in -Scp GRIPonRoboRIO in build.xml -Slow down DriveByVision when it gets closer -Changed center gear auto to run AutoCenterGear command group -Started grip ProcessBuilder in Robot init -Changed camera numbers to 1 and 2

--- a/Secondary_Human_Training_Golem/build.xml
+++ b/Secondary_Human_Training_Golem/build.xml
@@ -33,7 +33,7 @@
 	 	      <include name="**/*.dat"/>
 	 	    </fileset>
 	 	  </scp>
-	 	<scp file="GRIPonRoboRIO" todir="${username}@${target}:GRIPonRoboRIO" password="${password}" trust="true"/>
+	 	<scp file="GRIPonRoboRIO" todir="${username}@${target}:GRIPonRoboRIO" password="${password}" trust="true" filemode="555" failonerror="true"/>
 	 	<!--
 		<scp file="Resources/talonRight.csv" todir="${username}@${target}:talonProfileRight.csv" password="${password}" trust="true"/>
 		<scp file="Resources/talonLeft.csv" todir="${username}@${target}:talonProfileLeft.csv" password="${password}" trust="true"/>
