--- a/2018PowerUp/.classpath
+++ b/2018PowerUp/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="var" path="wpiutil" sourcepath="wpiutil.sources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="var" path="USERLIBS_DIR"/>
+	<classpathentry kind="lib" path="C:/Users/Girls of Steel/wpilib/user/java/lib/CTRE_Phoenix.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
