--- a/2018Team1EOPP/.classpath
+++ b/2018Team1EOPP/.classpath
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="var" path="wpilib" sourcepath="wpilib.sources"/>
 	<classpathentry exported="true" kind="var" path="networktables" sourcepath="ntcore.sources"/>
 	<classpathentry exported="true" kind="var" path="opencv" sourcepath="opencv.sources"/>
 	<classpathentry exported="true" kind="var" path="cscore" sourcepath="cscore.sources"/>
 	<classpathentry exported="true" kind="var" path="wpiutil" sourcepath="wpiutil.sources"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="var" path="CTRE_Phoenix_WPIAPI"/>
 	<classpathentry kind="var" path="CTRE_Phoenix"/>
 	<classpathentry kind="var" path="CTRE_Phoenix-sources"/>
-	<classpathentry kind="var" path="CTRE_Phoenix_WPIAPI"/>
 	<classpathentry kind="var" path="CTRE_Phoenix_WPIAPI-sources"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
