--- a/Limelight/.project
+++ b/Limelight/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MecanumDrive</name>
+	<name>Limelight</name>
 	<comment>Project MecanumDrive created by Buildship.</comment>
 	<projects>
 	</projects>
