--- a/2019DeepSpace/build.gradle
+++ b/2019DeepSpace/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2019.4.1"
+    id "com.snobot.simulator.plugin.SnobotSimulatorPlugin" version "2019-4.0.0" apply false
 }
 
 def ROBOT_MAIN_CLASS = "frc.robot.Main"
@@ -41,6 +42,13 @@ def includeDesktopSupport = false
 repositories {
     mavenCentral()
 }
+
+/////////////////////////////////////////////////////
+// Snobot Sim
+apply plugin: com.snobot.simulator.plugin.SnobotSimulatorPlugin
+apply from: "snobotsim/snobot_sim.gradle"
+// End Snobot Sim
+/////////////////////////////////////////////////////
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
