--- a/2020InfiniteRecharge/simulator_config/simulator_config.properties
+++ b/2020InfiniteRecharge/simulator_config/simulator_config.properties
@@ -3,3 +3,4 @@
 robot_type=java
 simulator_config=simulator_config/simulator_config.yml
 robot_class=frc.robot.Robot
+simulator_class=com.girlsofsteel.simulator.GirlsOfSteelSimulator
