--- a/2020InfiniteRecharge/.vscode/settings.json
+++ b/2020InfiniteRecharge/.vscode/settings.json
@@ -11,5 +11,7 @@
     "**/.project": true,
     "**/.settings": true,
     "**/.factorypath": true
-  }
+  },
+  "java.checkstyle.configuration": "${workspaceFolder}/styleguide/checkstyle.xml",
+  "java.checkstyle.version": "8.28"
 }
