--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,7 +3,7 @@ name: Java CI
 on: [push]
 
 jobs:
-  build:
+  build_robot:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
@@ -17,6 +17,30 @@ jobs:
       with:
         java-version: 1.11
     
-    - name: Build
+    - name: Build Robot
       working-directory: 2020InfiniteRecharge
       run: ./gradlew build
+
+  build_dashboard:
+    strategy:
+      matrix:
+        platform: [windows-latest]
+    runs-on: ${{ matrix.platform }}
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Set up Java
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.11
+    
+    - name: Build Shuffleboard Widgets
+      working-directory: 2020InfiniteRechargeDashboard
+      run: ./gradlew build publish
+
+    - name: Get Artifacts
+      uses: actions/upload-artifact@v1
+      with:
+        name: my-artifact_${{ matrix.platform }}
+        path: 2020InfiniteRechargeDashboard/build/publishing
