--- a/2020InfiniteRecharge/simulator_config/simulator_config.yml
+++ b/2020InfiniteRecharge/simulator_config/simulator_config.yml
@@ -58,13 +58,13 @@ mPwm:
   mMotorSimConfig: !!com.snobot.simulator.motor_sim.SimpleMotorSimulationConfig
     mMaxSpeed: 0.0
   mName: Winch (B)
-  mType: com.snobot.simulator.simulator_components.ctre.CtreTalonSrxSpeedControllerSim
+  mType: com.snobot.simulator.simulator_components.rev.RevSpeedControllerSimWrapper
 - mHandle: 103
   mMotorModelConfig: null
   mMotorSimConfig: !!com.snobot.simulator.motor_sim.SimpleMotorSimulationConfig
     mMaxSpeed: 0.0
   mName: Winch (A)
-  mType: com.snobot.simulator.simulator_components.ctre.CtreTalonSrxSpeedControllerSim
+  mType: com.snobot.simulator.simulator_components.rev.RevSpeedControllerSimWrapper
 - mHandle: 104
   mMotorModelConfig: null
   mMotorSimConfig: !!com.snobot.simulator.motor_sim.SimpleMotorSimulationConfig
@@ -110,8 +110,8 @@ mPwm:
     mMotorType: CIM
     mNumMotors: 2
   mMotorSimConfig: !!com.snobot.simulator.motor_sim.StaticLoadMotorSimulationConfig
-    mConversionFactor: 3.14
-    mLoad: 0.25
+    mConversionFactor: 1304.45859873
+    mLoad: 0.58
   mName: Shooter (M)
   mType: com.snobot.simulator.simulator_components.rev.RevSpeedControllerSimWrapper
 - mHandle: 110
@@ -126,12 +126,6 @@ mPwm:
     mMaxSpeed: 0.0
   mName: Shooter Intake
   mType: com.snobot.simulator.simulator_components.ctre.CtreTalonSrxSpeedControllerSim
-- mHandle: 112
-  mMotorModelConfig: null
-  mMotorSimConfig: !!com.snobot.simulator.motor_sim.SimpleMotorSimulationConfig
-    mMaxSpeed: 0.0
-  mName: Shooter Conveyor (F)
-  mType: com.snobot.simulator.simulator_components.rev.RevSpeedControllerSimWrapper
 - mHandle: 113
   mMotorModelConfig:
     mGearReduction: 10.0
