Updating intellij config

--- a/2020InfiniteRecharge/.gitignore
+++ b/2020InfiniteRecharge/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode,intellij
-# Edit at https://www.gitignore.io/?templates=c++,java,linux,macos,gradle,windows,visualstudiocode,intellij
+# Created by https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode,intellij+iml
+# Edit at https://www.gitignore.io/?templates=c++,java,linux,macos,gradle,windows,visualstudiocode,intellij+iml
 
 ### C++ ###
 # Prerequisites
@@ -36,7 +36,7 @@
 *.out
 *.app
 
-### Intellij ###
+### Intellij+iml ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -106,23 +106,13 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-### Intellij Patch ###
-# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+### Intellij+iml Patch ###
+# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
-
-# Sonarlint plugin
-.idea/**/sonarlint/
-
-# SonarQube Plugin
-.idea/**/sonarIssues.xml
-
-# Markdown Navigator plugin
-.idea/**/markdown-navigator.xml
-.idea/**/markdown-navigator/
+*.iml
+modules.xml
+.idea/misc.xml
+*.ipr
 
 ### Java ###
 # Compiled class file
@@ -255,7 +245,7 @@ imgui.ini
 ### Gradle Patch ###
 **/build/
 
-# End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode,intellij
+# End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode,intellij+iml
 
 # SnobotSim
 logs/
