--- a/2020InfiniteRechargeDashboard/build.gradle
+++ b/2020InfiniteRechargeDashboard/build.gradle
@@ -70,7 +70,8 @@ dependencies {
     compile 'edu.wpi.first.shuffleboard.plugin:networktables:' + shuffleboard_version
 }
 
-apply from: "styleguide.gradle"
+
+apply from: "../styleguide.gradle"
 
 publishing {
     repositories {
